--- a/index.html
+++ b/index.html
@@ -9,25 +9,24 @@
 </head>
 <body>
     <h1>First Javascript project: Calculator</h1>
-    <div>
-        <p></p>
-        <button>AC</button>
+    <form>
+        <button class="acButton">AC</button>
+        <button>/</button>
         <button>1</button>
         <button>2</button>
         <button>3</button>
+        <button>*</button>
         <button>4</button>
         <button>5</button>
         <button>6</button>
+        <button>-</button>
         <button>7</button>
         <button>8</button>
         <button>9</button>
-        <button>.</button>
-        <button>0</button>
-        <button>/</button>
-        <button>*</button>
-        <button>-</button>
         <button>+</button>
-        <button>=</button>
-    </div>
+        <button>.</button>
+        <button class="buttonZero">0</button>
+        <button class="equalsButton">=</button>
+    </form>
 </body>
 </html>
