--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <h1>First Javascript project: Calculator</h1>
     <form>
+        <input />
         <button class="acButton">AC</button>
         <button>/</button>
         <button>1</button>
