--- a/index.html
+++ b/index.html
@@ -4,34 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculator</title>
+    <title>Document</title>
     <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
     <div class="container">
-        <p>
+        <h1>
           Calculator Project
-        </p>
+        </h1>
         <div class="calculator">
-          <div class="calculator_display">0</div>
+          <div class="calculator_display"></div>
     
           <div class="calculator_keys">
             <button class= "AC" data-action="clear">AC</button>
             <button class="keyOperator" data-action="add">+</button>
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
+            <button class="numKey">1</button>
+            <button class="numKey">2</button>
+            <button class="numKey">3</button>
             <button class="keyOperator" data-action="subtract">-</button>
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
-            <button class="keyOperator" data-action="multiply">&times;</button>
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
-            <button class="keyOperator" data-action="divide">÷</button>
+            <button class="numKey">4</button>
+            <button class="numKey">5</button>
+            <button class="numKey">6</button>
+            <button class="keyOperator" data-action="multiply">*</button>
+            <button class="numKey">7</button>
+            <button class="numKey">8</button>
+            <button class="numKey">9</button>
+            <button class="keyOperator" data-action="divide">/</button>
             <button data-action="decimal">.</button>
-            <button>0</button>
+            <button class="numKey">0</button>
             <button class="equalsButton" data-action="calculate">=</button>
           </div>
         </div>
