--- a/index.html
+++ b/index.html
@@ -16,23 +16,23 @@
           <div class="calculator_display"></div>
     
           <div class="calculator_keys">
-            <button class= "AC" data-action="clear">AC</button>
-            <button class="keyOperator" data-action="add">+</button>
+            <button class= "AC" >AC</button>
+            <button class="keyOperator" >+</button>
             <button class="numKey">1</button>
             <button class="numKey">2</button>
             <button class="numKey">3</button>
-            <button class="keyOperator" data-action="subtract">-</button>
+            <button class="keyOperator">-</button>
             <button class="numKey">4</button>
             <button class="numKey">5</button>
             <button class="numKey">6</button>
-            <button class="keyOperator" data-action="multiply">*</button>
+            <button class="keyOperator" >*</button>
             <button class="numKey">7</button>
             <button class="numKey">8</button>
             <button class="numKey">9</button>
-            <button class="keyOperator" data-action="divide">/</button>
-            <button data-action="decimal">.</button>
+            <button class="keyOperator" >/</button>
+            <button class="numKey">.</button>
             <button class="numKey">0</button>
-            <button class="equalsButton" data-action="calculate">=</button>
+            <button class="equalsButton" >=</button>
           </div>
         </div>
       </div>
